# sitwith_ref_fastapi

./: .gitignore  main.py  pyproject.toml  remove.txt
apis/: test.py
core/: log.py  validator.py
database/: crud.py  databases.py  models.py  schema.py
routes/: products.py  users.py
